# cs444-compiler

./: .clang-format  .gitignore  CMakeLists.txt  DoxygenMain.md  FIX_A2.md  IR.md  LICENSE  Makefile  Makefile1  Mangling.md  README.md  colors.py  doxygen.in  make_docs.sh  ou  runtest.py  runtest_a1.py  runtest_a2.py  stdvariant.py
docs/: conf.py  design-overview.rst  driver.rst  frontend-internals.rst  index.rst  mangling.rst  pass-architecture.rst
docs/_static/: custom.css  replaceDxRefs.js
include/: AllPasses.h
include/ast/: AST.h  AstNode.h  Decl.h  DeclContext.h  Expr.h  ExprEvaluator.h  ExprNode.h  Stmt.h  Type.h
include/codegen/: CGExpr.h  CodeGen.h  Mangling.h
include/diagnostics/: Diagnostics.h  Location.h  SourceManager.h
include/grammar/: joos1w_lexer_internal.h
include/mc/: DAGBuilder.h  ISelDAGBuilder.h  InstSelectDAG.h  InstSelectNode.h  MCFunction.h  MCPatterns.h  MCTargetDesc.h  Patterns.h
include/parsetree/: ParseTree.h  ParseTreeVisitor.h
include/passes/: AllPasses.h  CompilerPasses.h  IRContextPass.h
include/semantic/: AstValidator.h  CFGBuilder.h  ConstantTypeResolver.h  DataflowAnalysis.h  ExprResolver.h  ExprStaticChecker.h  ExprTypeResolver.h  HierarchyChecker.h  NameResolver.h  Semantic.h  TypeResolver.h
include/tir/: BasicBlock.h  CompilationUnit.h  Constant.h  Context.h  IRBuilder.h  Instructions.h  TIR.h  Type.h  Value.h
include/utils/: Assert.h  BitField.h  BumpAllocator.h  DotPrinter.h  EnumMacros.h  Error.h  Generator.h  PassManager.h  User.h  Utils.h
lib/ast/: AST.h  ASTClassInterface.h  ASTDecl.h  ASTDeclContext.h  ASTExpr.h  ASTNode.h  ASTPrinter.cc  ASTType.h  AstNode.h  Decl.cc  Decl.h  DeclContext.cc  DeclContext.h  Expr.cc  Expr.h  ExprEvaluator.h  ExprNode.h  Modifiers.cc  ScopeID.cc  Stmt.cc  Stmt.h  Type.cc  Type.h  ast_printer.cc  main.cc  test.java
lib/codegen/: CGClass.cc  CGExpr.cc  CGFunction.cc  CGStmt.cc  CodeGen.cc  Mangling.cc
lib/diagnostics/: Diagnostics.h  Location.h  SourceManager.h
lib/grammar/: Joos1W.cc  Joos1WGrammar.h  joos1w_lexer.l  joos1w_lexer_internal.h  joos1w_parser.y
lib/mc/: DAGBuilder.cc  ISelDAGBuilder.cc  InstSelectDAG.cc  InstSelectNode.cc  MCFunction.cc  MCPatterns.cc  Patterns.cc
lib/parsetree/: ParseTree.cc  ParseTree.h  ParseTreeDotPrinter.cc  ParseTreePrinter.cc  ParseTreeTypes.cc  ParseTreeTypes.h  ParseTreeVisitor.cc  ParseTreeVisitor.h  VisitClassInterface.cc  VisitExpression.cc  VisitLeaf.cc  VisitStatement.cc
lib/passes/: AllPasses.h  CleanupTerminatorsPass.cc  CompilerPasses.cc  CompilerPasses.h  DFAPass.cc  ExprResolverPass.cc  IRContextPass.cc  IRContextPass.h  NameResolverPass.cc  PrintASTPass.cc  SemanticPasses.cc  TypeCheckerPass.cc
lib/passes/mc/: InstSched.cc  InstSelect.cc  MIRBuilder.cc
lib/passes/transform/: AsmWriter.cc  GlobalDCE.cc  MemToReg.cc  PrintCFG.cc  SimplifyCFG.cc
lib/semantic/: AstValidator.cc  CFGBuilder.cc  ConstantTypeResolver.cc  DataflowAnalysis.cc  ExprResolver.cc  ExprResolver.h  ExprStaticChecker.cc  ExprTypeResolver.cc  HierarchyChecker.cc  HierarchyChecker.h  NameResolver.cc  NameResolver.h  Semantic.cc  Semantic.h  TypeChecker.cc  TypeChecker.h  TypeResolver.cc  TypeResolver.h
lib/tir/: BasicBlock.cc  CompilationUnit.cc  Constant.cc  Context.cc  Instructions.cc  Type.cc  Types.cc  Value.cc
lib/utils/: Assert.cc  BumpAllocator.cc  BumpAllocator.h  CLI11.h  CommandLine.h  DotPrinter.cc  DotPrinter.h  EnumMacros.h  Error.cc  FragmentGenerator.cc  FragmentGenerator.h  Generator.h  Location.h  PassManager.cc  PassManager.h  Utils.cc  Utils.h
passes/: CodegenPass.cc  CompilerPasses.cc  CompilerPasses.h  IRContextPass.cc  IRContextPass.h  IRPasses.cc  IRPasses.h  SemanticPasses.cc
passes/analysis/: DominatorTree.cc  DominatorTree.h
passes/mc/: InstSched.cc  InstSelect.cc  MIRBuilder.cc
passes/transform/: GlobalDCE.cc  MemToReg.cc  PrintCFG.cc  SimplifyCFG.cc
scripts/: common.py  gendbg.py  generate_a1test.py  generate_gtest.py  jcc1.py  jccfilt.py  runtest.py  showerrors.py
tests/: ast_tests.cc  common.cc  common.h  generate_gtest.py  hello_world.java  lexer.cc  lexer_tester.cc  lexer_tests.cc  parser_more_tests.cc  parser_tester.cc  parser_tests.cc
tests/codegen/: basic_short_circuit.java
tests/data/: ast_test.java  basic.java  basic_test.java  basic_test_owen.java  hello_world.java  local_scope.java  test.java  test_fragments.txt  test_name.java  test_name2.java
tests/data/a1/: README.md  r10_invalid_intf_final_method.java  r10_invalid_intf_native_method.java  r10_invalid_intf_static_method.java  r10_valid_intf.java  r11_invalid_intf_method_body.java  r11_valid_intf_method_body.java  r12_invalid_class_noctor.java  r13_invalid_final_field.java  r13_invalid_final_method.java  r13_valid_final_method.java  r14_invalid_multi_array_access_lhs.java  r14_invalid_multi_array_access_rhs.java  r14_invalid_multi_array_inst.java  r14_invalid_multi_array_type.java  r15_invalid_ctor_super.java  r15_invalid_ctor_this.java  r15_invalid_method_super.java  r15_invalid_method_this.java  r16_invalid_double.java  r16_invalid_float.java  r16_invalid_long.java  r16_invalid_multifield.java  r16_invalid_package_private_class.java  r16_invalid_package_private_field.java  r16_invalid_package_private_method.java  r1_invalid_ascii_char.java  r1_valid_ascii_char.java  r2_invalid_abstract_final_class.java  r3_invalid_abstract_method_body.java  r3_invalid_native_method_body.java  r6_invalid_native_method.java  (+16 more)
tools/astprinter/: main.cc
tools/crashtest/: main.cc
tools/gen_fragments/: FragmentGenerator.cc  FragmentGenerator.h  basic_fragments.cc  basic_fragments.h  main.cc
tools/genfrags/: FragmentGenerator.cc  FragmentGenerator.h  basic_fragments.cc  basic_fragments.h  class_fragments.cc  class_fragments.h  main.cc  method_fragments.cc  method_fragments.h
tools/helloworld/: main.cc
tools/jcc1/: jcc1.h  main.cc  msgprinter.cc
tools/joosc/: main.cc
tools/lextests/: main.cc
tools/parser/: main.cc
tools/scanner/: main.cc
tools/tirtest/: main.cc
tools/vscode-extension/: CHANGELOG.md  README.md  iro.grammar.txt  package.json
(+16 files in other folders)
